--- a/InnsbruckEducation/build.gradle
+++ b/InnsbruckEducation/build.gradle
@@ -9,12 +9,16 @@ version = '1.0'
 
 repositories {
      mavenCentral()
+     maven {
+         url 'https://jitpack.io'
+     }
     jcenter()
 }
 
 dependencies {
     compile group: 'org.processing', name: 'core', version: '3.2.3'
     testCompile group: 'junit', name: 'junit', version: '4.+'
+    compile 'org.spockframework.spock:spock-core:spock-1.1'
     compile fileTree(dir: 'libs', include: '*.jar')
 }
 
