--- a/InnsbruckEducation/build.gradle
+++ b/InnsbruckEducation/build.gradle
@@ -17,6 +17,7 @@ repositories {
 
 dependencies {
     compile group: 'org.processing', name: 'core', version: '3.2.3'
+    compile group: 'jfree', name: 'jfreechart', version: '1.0.13'
     testCompile group: 'junit', name: 'junit', version: '4.+'
     compile 'org.spockframework.spock:spock-core:spock-1.1'
     compile fileTree(dir: 'libs', include: '*.jar')
